25/05/16 (TRUST)  Portability : Released version of metis upgrated to 5.1.0
25/05/16 (TRUST)  Portability : Released version of PETSc upgrated to 3.6.3 (and some packages whose MUMPS and METIS)
25/05/16 (TRUST)  Minor change: Option -disable-check_sources and -for_appli_salome added to the TRUST configure tool
18/05/16 (Kernel) Portability : MEDCoupling updated to 780 version
21/03/16 (Tools)  Portability : Released version of VisIt is upgraded to 2.10.0
21/03/16 (TRUST)  Bug fixed   : Fixed bug in Traitement_particulier of Canal with QC fluid and VDF discretization
16/02/16 (TRUST)  Bug fixed   : k-eps turbulence model with concentration (it is OK now with several constituents)
04/02/16 (TRUST)  Minor change: Option -without-host_file added to the TRUST configure tool (Do not load the environnement variables specified in an env_src/HOST_*.sh file)
03/02/16 (TRUST)  Minor change: Option -disable-check added to the TRUST configure tool (Disable checks for external packages)
15/12/15 (Tools)  Optimization: New configuration TGCC to client/serveur mode of VisIt on Curie and Airain via HPCDrive
--------------------------------------------------------------------------------------------------
Release notes version 1.7.2 : Enhancements, modifications and corrected bugs since version 1.7.1 :
--------------------------------------------------------------------------------------------------
02/11/15 (TRUST)  Translation : Several keywords in .data files are now in English. All the TRUST validation forms have been updated.
25/11/15 (TRUST)  Minor change: Option -config added to the trust script (Configure nedit, vim or emacs editor with keywords TRUST)
20/11/15 (Kernel) New keyword : New keyword champ_front_pression_from_u + boundary_field_inward normal_value (function of time)
20/11/15 (Kernel) New keyword : Add quiet option to SolveurSys
20/11/15 (TRUST)  New feature : Add of a column corresponding to ||TAU||_2 before |TAUx| in ***Ustar.face (turbulence model)