@@ -4,6 +4,7 @@ Release notes version 1.7.3_beta : Enhancements, modifications and corrected bug
 25/05/16 (TRUST)  Portability : Released version of metis upgrated to 5.1.0
 25/05/16 (TRUST)  Portability : Released version of PETSc upgrated to 3.6.3 (and some packages whose MUMPS and METIS)
 25/05/16 (TRUST)  Minor change: Option -disable-check_sources and -for_appli_salome added to the TRUST configure tool
+23/05/16 (TRUST)  Major change: Post in som on symetrie treated differently (TRUST_POST_SOM_SYMETRIE_ERREUR, TRUST_POST_SOM_NON_PARA, TRUST_POST_SOM_NO_DIRICHLET in Champ_base.cpp)
 18/05/16 (Kernel) Portability : MEDCoupling updated to 780 version
 21/03/16 (Tools)  Portability : Released version of VisIt is upgraded to 2.10.0
 21/03/16 (TRUST)  Bug fixed   : Fixed bug in Traitement_particulier of Canal with QC fluid and VDF discretization
